--- a/index.html
+++ b/index.html
@@ -4,56 +4,110 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
+  <nav>
+    <div>
+      <span id="nav-title">sunnyside</span>
+    </div>
+    <div>
+      <ul>
+        <li title="About">About</li>
+        <li title="Services">Services</li>
+        <li title="Projects">Projects</li>
+        <li title="Contact">Contact</li>
+      </ul>
+    </div>
+  </nav>
 
-  We are creatives
+  <div id="hero-image-container">
+    <div id="hero-text-container">
+      <h1>We are creatives</h1>
+      <div id="arrow">&#8595;</div>
+    </div>
+  </div>
+  <div id="card-wrapper">
+    <div class="card">
+      <div class="card-contents">
+        <h2>
+          Transform your brand
+        </h2>
+        <p class="card-text">
+          We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.
+        </p>
+        <p class="card-cta">
+          LEARN MORE
+        </p>
+      </div>
+    </div>
+    <div class="card-image">
+      <img src="images/desktop/image-transform.jpg" alt="" class="card-image">
+    </div>
+    <div class="card-image">
+      <img src="images/desktop/image-stand-out.jpg" alt="" class="card-image">
+    </div>
+    <div class="card">
+      <div class="card-contents">
+        <h2>
+          Stand out to the right audience
+        </h2>
+        <p class="card-text">
+          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
+        </p>
+        <p class="card-cta">
+          LEARN MORE
+        </p>
+      </div>
+    </div>
+    <div class="card-image">
+      <img src="images/desktop/image-graphic-design.jpg" alt="" class="card-image">
+      <div class="card-image-text">
+        <h3>Graphic design</h3>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </div>
+    </div>
+    <div class="card-image">
+      <img src="images/desktop/image-photography.jpg" alt="" class="card-image">
+      <div class="card-image-text">
+        <h3>Photography</h3>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </div>
+    </div>
+  </div>
+  <div id="testimonials-container">
+    <h2>Client testimonials</h2>
+    <div id="testimonials-wrapper">
+      <div class="testimonial-card">
+        <img src="images/image-emily.jpg" alt="">
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p><strong>Emily R.</strong></p>
+        <p><small>Marketing Director</small></p>
+      </div>
+      <div class="testimonial-card">
+        <img src="images/image-thomas.jpg" alt="">
+        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p><strong>Thomas S.</strong></p>
+        <p><small>Chief Operating Officer</small></p>
+      </div>
+      <div class="testimonial-card">
+        <img src="images/image-jennie.jpg" alt="">
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p><strong>Jennie F.</strong></p>
+        <p><small>Business Owner</small></p>
+      </div>
 
-  Transform your brand
+    </div>
+  </div>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+  <!-- 
 
   About
   Services
@@ -63,6 +117,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
